Update filter to allow Display Color, fix settings page overflow

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,3 @@
-.app {
-}
 .tsinfolink {
     position:absolute;
     right:0px;
@@ -53,4 +51,9 @@
 
 .variable-button-disabled{
    color: #d6d6d6;
+}
+
+.x-container.app-settings {
+     height: 100% !important;
+     overflow-y: scroll;
 }
